deploy-infra.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "CloudFormation template to create VPC, Security Group and IAM Role."

Parameters:
  AvailabilityZone:
    Type: String
    Description: EC2 Availability Zone

  ServerInstanceProfile:
    Type: String
    Description: EC2 Server Instance Profile Name
    Default: "MAAPCohereServerInstanceProfile"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MAAPCohereVPC

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Ref AvailabilityZone
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: MAAPCohereSubnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MAAPCohereIGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: MAAPCohereRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for MAAP-Cohere-Stack"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: 10.0.0.0/16  # Only allow traffic from within VPC
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 10.0.0.0/16
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 10.0.0.0/16
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
      SecurityGroupEgress:
        - CidrIp: 10.0.0.0/16
          IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
      Tags:
        - Key: Name
          Value: MAAPCohereSG


  IAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: "ec2.amazonaws.com"
            Action: "sts:AssumeRole"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/AmazonSageMakerFullAccess
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
        - arn:aws:iam::aws:policy/AmazonBedrockFullAccess
      Tags:
        - Key: Name
          Value: MAAPCohereRole

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref IAMRole
      InstanceProfileName: !Ref ServerInstanceProfile

Outputs:
  VPCID:
    Value: !Ref VPC
    Description: "VPC ID"

  SubnetID:
    Value: !Ref Subnet
    Description: "Subnet ID"

  SecurityGroupID:
    Value: !Ref SecurityGroup
    Description: "Security Group ID"

  IAMRoleARN:
    Value: !GetAtt IAMRole.Arn
    Description: "IAM Role ARN"
    
  IAMInstanceProfile:
    Value: !Ref InstanceProfile
    Description: "IAM Instance Profile Name"
